Fixed Navbar
Menu on small screen is centered
Added bottom-margin to last anchor element
Removed small whitespace below navbar

--- a/css/style.css
+++ b/css/style.css
@@ -80,11 +80,6 @@ h4 {
     margin-top: 48px;
 }
 
-/**#interview{
-    margin-top:30px;
-    margin-bottom:10px;
-}**/
-
 .margin-top {
     margin-top: 35px;
 }
@@ -148,12 +143,13 @@ header {
 }
 
 nav {
-    display: inline-block;
+    text-align: center;
 }
 
 nav>ul {
     list-style-type: none;
     padding: 0;
+    margin: 0;
 }
 
 nav>ul>li>a {
@@ -184,6 +180,10 @@ nav>ul>li>a {
     display: block;
 }
 
+.contact {
+    padding-bottom: 15px;
+}
+
 .jump_links {
     position: sticky;
     top: 0;
@@ -191,8 +191,11 @@ nav>ul>li>a {
     padding: 10px 30px;
 }
 
-footer,
 .top {
+    background-color: #f3e13e;
+}
+
+footer {
     background-color: #f3e13e;
     display: inline-block;
     width: 100%;
@@ -628,6 +631,10 @@ a:visited,
 
     .navtoggle li:last-child {
         display: none;
+    }
+
+    .contact {
+        padding-bottom: 0px;
     }
 
     .container {
